compiler/tests/fixtures/invalid/semantics/sifting_group_action_role_n_without_star.viv
// Group action role with n: but missing * decorator

action foo:
    roles:
        @doer:
            as: initiator


pattern bad:
    roles:
        @p:
            as: character
    actions:
        @acts:
            from: @p.memories
            n: 1-5
